fix: site-footer icons are visible again and updated content

--- a/packages/fe/assets/scss/variables.scss
+++ b/packages/fe/assets/scss/variables.scss
@@ -36,6 +36,7 @@ $racingGreen: #101A17; // rgba(16, 26, 23, 1)
 $lima: #8ED31C; // rgba(142, 211, 28, 1)
 $silver: #CACACA; // rgba(202, 202, 202, 1)
 $mineralGreen: #3B564F; // rgba(59, 86, 79, 1)
+$juniper: #75938B; // rgba(117, 147, 139, 1)
 
 $replace1: #D9D9D9;
 $replace2: #C6C6C6;
